Webclues K8 Requirement files/cache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache-deployment
  labels:
    app: cache
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
      - name: cache-container
        image: redis
        ports:
        - containerPort: 6379
