Webclues K8 Requirement files/my-app-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-app-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: my-app
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector: {} # Allow traffic from pods within the same namespace
    - podSelector:    # Allow traffic from a specific pod with the label app=trusted
        matchLabels:
          app: trusted
  egress:
  - to:
    - podSelector: {} # Allow traffic to pods within the same namespace
